database, etc update

--- a/_posts/CS/자료구조/2023-01-28-Heap.md
+++ b/_posts/CS/자료구조/2023-01-28-Heap.md
@@ -38,7 +38,7 @@ categories: cs-ds
     + 부모 노드의 키 값이 자식 노드의 키 값보다 작거나 같은 완전 이진 트리
     + key(부모 노드) <= key(자식 노드)
 
-![최대힙 & 최소힙.png](img%2F%EC%B5%9C%EB%8C%80%ED%9E%99%20%26%20%EC%B5%9C%EC%86%8C%ED%9E%99.png)
+![최대힙 & 최소힙.png](./img%2F%EC%B5%9C%EB%8C%80%ED%9E%99%20%26%20%EC%B5%9C%EC%86%8C%ED%9E%99.png)
 
 ## 힙의 구현
 + 힙을 저장하는 표준적인 자료구조는 배열이다.
