--- a/_posts/CS/데이터베이스/2023-01-30-정규화.md
+++ b/_posts/CS/데이터베이스/2023-01-30-정규화.md
@@ -36,8 +36,8 @@ categories: cs-database
     + 모든 속성에 반복되는 그룹이 나타나지 않는다.
     + 기본 키를 사용하여 관련 데이터의 각 집합을 고유하게 식별할 수 있어야 한다.
 
-![제 1 정규형1.png](./img%2F%EC%A0%9C%201%20%EC%A0%95%EA%B7%9C%ED%98%951.png)
-![제 1 정규형2.png](./img%2F%EC%A0%9C%201%20%EC%A0%95%EA%B7%9C%ED%98%952.png)
+![img1 daumcdn](https://user-images.githubusercontent.com/48073115/215373141-305db7b8-ad69-4e3a-bcbc-b273afa772f0.png)
+![img1 daumcdn](https://user-images.githubusercontent.com/48073115/215373414-560bb70d-87f5-490b-a39a-a8169171eba4.png)
 <div align="center">출처 : <a href="https://rebro.kr/160">[DB] 8.정규형 (1NF, 2NF, 3NF, BCNF)</a></div>
 
 ### 제 2 정규형
@@ -49,7 +49,7 @@ categories: cs-database
 + X -> Y 라고 가정했을 때 X의 어떠한 속성이라도 제거하면 더 이상 함수적 종속성이 성립하지 않는 경우를 말한다.
 즉 키가 아닌 열들이 각각 후보키에 대해 결정되는 릴레이션 형태를 말한다.
 
-![제 2 정규형1.png](./img%2F%EC%A0%9C%202%20%EC%A0%95%EA%B7%9C%ED%98%951.png)
+![img1 daumcdn](https://user-images.githubusercontent.com/48073115/215373477-e79a1226-d303-4988-8565-93abdbc61150.png)
 <div align="center">출처 : <a href="https://rebro.kr/160">[DB] 8.정규형 (1NF, 2NF, 3NF, BCNF)</a></div>
 
 ### 제 3 정규형
@@ -59,17 +59,17 @@ categories: cs-database
 #### 이행적 함수 종속성
 + X -> Y, Y -> Z 의 경우에 의해서 추론될 수 있는 X -> Z 의 종속 관계를 말한다.
 
-![제 3 정규형1.png](./img%2F%EC%A0%9C%203%20%EC%A0%95%EA%B7%9C%ED%98%951.png)
+![img1 daumcdn](https://user-images.githubusercontent.com/48073115/215373532-9e722c34-a304-48f0-a0bc-d13aa78aa1f7.png)
 <div align="center">출처 : <a href="https://rebro.kr/160">[DB] 8.정규형 (1NF, 2NF, 3NF, BCNF)</a></div>
 
 ### BCNF 정규형
 + 제 3 정규형을 조금 더 강화시킨 개념이다. 강한 제 3 정규형이라고도 한다.
 + 모든 결정자가 Key 인 경우 BCNF 이다.
 
-![BCNF 정규형1.png](./img%2FBCNF%20%EC%A0%95%EA%B7%9C%ED%98%951.png)
+![img1 daumcdn](https://user-images.githubusercontent.com/48073115/215373577-9168ae66-ebe1-4f86-999b-3041ee6d9acb.png)
 <div align="center">출처 : <a href="https://rebro.kr/160">[DB] 8.정규형 (1NF, 2NF, 3NF, BCNF)</a></div>
 후보키가 아님에도 과목명을 결정할 수 있기 때문에 담당 교수는 결정자에 속한다.
 모든 결정자는 항상 후보키가 되도록 릴레이션을 분해해주면 BCNF 를 만족하게 된다.
 
-![BCNF 정규형2.png](./img%2FBCNF%20%EC%A0%95%EA%B7%9C%ED%98%952.png)
+![img1 daumcdn](https://user-images.githubusercontent.com/48073115/215373620-e8228d86-0916-4713-87b8-67dd0debf232.png)
 <div align="center">출처 : <a href="https://rebro.kr/160">[DB] 8.정규형 (1NF, 2NF, 3NF, BCNF)</a></div>
