--- a/_posts/CS/데이터베이스/2023-01-30-정규화.md
+++ b/_posts/CS/데이터베이스/2023-01-30-정규화.md
@@ -6,6 +6,8 @@ categories: cs-database
 [1. 정규화 탄생 배경](#정규화-탄생-배경)
 [2. 정규화 목적](#정규화-목적)  
 [3. 정규형](#정규형)  
+[4. 정규화 장점 & 단점](#정규화-장점--단점)  
+[5. 반정규화](#반정규화)
 
 ## 정규화 탄생 배경
 + 한 릴레이션에 여러 엔티티의 애트리뷰트들을 혼합하게 되면 정보가 중복 저장되며 저장 공간을 낭비하게 된다.
@@ -36,8 +38,8 @@ categories: cs-database
     + 모든 속성에 반복되는 그룹이 나타나지 않는다.
     + 기본 키를 사용하여 관련 데이터의 각 집합을 고유하게 식별할 수 있어야 한다.
 
-![img1 daumcdn](https://user-images.githubusercontent.com/48073115/215373141-305db7b8-ad69-4e3a-bcbc-b273afa772f0.png)
-![img1 daumcdn](https://user-images.githubusercontent.com/48073115/215373414-560bb70d-87f5-490b-a39a-a8169171eba4.png)
+![](https://user-images.githubusercontent.com/48073115/215373141-305db7b8-ad69-4e3a-bcbc-b273afa772f0.png)
+![](https://user-images.githubusercontent.com/48073115/215373414-560bb70d-87f5-490b-a39a-a8169171eba4.png)
 <div align="center">출처 : <a href="https://rebro.kr/160">[DB] 8.정규형 (1NF, 2NF, 3NF, BCNF)</a></div>
 
 ### 제 2 정규형
@@ -49,7 +51,7 @@ categories: cs-database
 + X -> Y 라고 가정했을 때 X의 어떠한 속성이라도 제거하면 더 이상 함수적 종속성이 성립하지 않는 경우를 말한다.
 즉 키가 아닌 열들이 각각 후보키에 대해 결정되는 릴레이션 형태를 말한다.
 
-![img1 daumcdn](https://user-images.githubusercontent.com/48073115/215373477-e79a1226-d303-4988-8565-93abdbc61150.png)
+![](https://user-images.githubusercontent.com/48073115/215373477-e79a1226-d303-4988-8565-93abdbc61150.png)
 <div align="center">출처 : <a href="https://rebro.kr/160">[DB] 8.정규형 (1NF, 2NF, 3NF, BCNF)</a></div>
 
 ### 제 3 정규형
@@ -59,17 +61,39 @@ categories: cs-database
 #### 이행적 함수 종속성
 + X -> Y, Y -> Z 의 경우에 의해서 추론될 수 있는 X -> Z 의 종속 관계를 말한다.
 
-![img1 daumcdn](https://user-images.githubusercontent.com/48073115/215373532-9e722c34-a304-48f0-a0bc-d13aa78aa1f7.png)
+![](https://user-images.githubusercontent.com/48073115/215373532-9e722c34-a304-48f0-a0bc-d13aa78aa1f7.png)
 <div align="center">출처 : <a href="https://rebro.kr/160">[DB] 8.정규형 (1NF, 2NF, 3NF, BCNF)</a></div>
 
 ### BCNF 정규형
 + 제 3 정규형을 조금 더 강화시킨 개념이다. 강한 제 3 정규형이라고도 한다.
 + 모든 결정자가 Key 인 경우 BCNF 이다.
 
-![img1 daumcdn](https://user-images.githubusercontent.com/48073115/215373577-9168ae66-ebe1-4f86-999b-3041ee6d9acb.png)
+![](https://user-images.githubusercontent.com/48073115/215373577-9168ae66-ebe1-4f86-999b-3041ee6d9acb.png)
 <div align="center">출처 : <a href="https://rebro.kr/160">[DB] 8.정규형 (1NF, 2NF, 3NF, BCNF)</a></div>
 후보키가 아님에도 과목명을 결정할 수 있기 때문에 담당 교수는 결정자에 속한다.
 모든 결정자는 항상 후보키가 되도록 릴레이션을 분해해주면 BCNF 를 만족하게 된다.
 
-![img1 daumcdn](https://user-images.githubusercontent.com/48073115/215373620-e8228d86-0916-4713-87b8-67dd0debf232.png)
+![](https://user-images.githubusercontent.com/48073115/215373620-e8228d86-0916-4713-87b8-67dd0debf232.png)
 <div align="center">출처 : <a href="https://rebro.kr/160">[DB] 8.정규형 (1NF, 2NF, 3NF, BCNF)</a></div>
+
+## 정규화 장점 & 단점
++ 장점
+  + 데이터베이스 변경 시 갱신 이상 문제점을 해결할 수 있다.
+  + 데이터베이스 구조 확장 시 그 구조를 변경하지 않아도 되거나 일부만 변경해도 된다.
+  이는 데이터베이스와 연동된 응용 프로그램에 최소한의 영향만을 미치게 되며 응용프로그램의 생명을 연장시킨다.
+  + 정규화된 테이블들과 정규화된 테이블들간의 관계들은 현실 세계에서의 개념들과 그들간의 관계들을 반영한다.
++ 단점
+  + 릴레이션의 분해로 인해 릴레이션 간의 연산(Join 연산)이 많아진다.
+    + 이로 인해 질의에 대한 응답 시간이 느려질 수 있다.
+
+## 반정규화
++ 조회를 하는 SQL 문장에서 Join 이 많이 발생하여 이로 인한 성능저하가 나타나는 경우 반정규화를 적용하는 전략이 필요하다.
++ 정규화된 엔티티, 속성, 관계를 시스템의 성능 향상 및 개발과 운영의 단순화를 위해 중복 통합, 분리 등을 수행하는 데이터 모델링 기법 중 하나이다.
++ 디스크 I/O 량이 많아서 조회 시 성능이 저하되거나 테이블끼리의 경로가 너무 멀어 Join 으로 인한 성능 저하가 예상되거나
+칼럼을 계산하여 조회할 때 성능이 저하될 것이 예상되는 경우 반정규화를 수행하게 된다.
++ 일반적으로 조회에 대한 처리 성능이 중요하다고 판단될 때 부분적으로 반정규화를 고려하게 된다.
+
+### 반정규화의 대상
++ 자주 사용되는 테이블에 액세스하는 프로세스의 수가 가장 많고 항상 일정한 범위만을 조회하는 경우
++ 테이블에 대량 데이터가 있고 대량의 범위를 자주 처리하는 경우, 성능상 이슈가 있을 경우
++ 테이블에 지나치게 조인을 많이 사용하게 되어 데이터를 조회하는 것이 기술적으로 어려울 경우
