--- a/_posts/temp_trash_can/취업준비/알고리즘/2022-01-09-재귀.md
+++ b/_posts/temp_trash_can/취업준비/알고리즘/2022-01-09-재귀.md
@@ -1,44 +1,79 @@
----
-title: "재귀"
-categories: JP_algorithm
----
+[//]: # (---)
 
-[1. 재귀](#재귀)
+[//]: # (title: "재귀")
 
-## 재귀
-### 최대공약수, 최소공배수
-+ 유클리드 호제법을 이용해 푼다.
-  + GCD(A, B) = GCD(B, A % B)
-```java
-// 최대공약수 재귀 방식
-int gcd(int a, int b) {
-  if (b == 0) return a;
-  // GCD(a, b) = GCD(b, r) 이므로 (r = a % b)
-  return gcd(b, a%b);
-}
+[//]: # (categories: JP_algorithm)
 
-// 최소공배수 : Least Common multiple
-int lcm(int a, int b) {
-  return (a*b) / gcd(a, b);
-}
-```
+[//]: # (---)
 
-### 하노이탑
+[//]: # ()
+[//]: # ([1. 재귀]&#40;#재귀&#41;)
 
-```java
-void Hanoi(int N, int start, int mid, int to) {
-  if (N == 1) {
-    print(start + " " + to + "\n");
-    return;
-  }
-  
-  // STEP 1 : N-1개를 A에서 B로 이동
-  Hanoi(N-1, start, to, mid);
-  
-  // STEP 2 : 1개를 A에서 C로 이동
-  print(start + " " + to + "\n");
-  
-  // STEP 3 : N-1개를 B에서 C로 이동
-  Hanoi(N-1, mid, start, to);
-}
-```
+[//]: # ()
+[//]: # (## 재귀)
+
+[//]: # (### 최대공약수, 최소공배수)
+
+[//]: # (+ 유클리드 호제법을 이용해 푼다.)
+
+[//]: # (  + GCD&#40;A, B&#41; = GCD&#40;B, A % B&#41;)
+
+[//]: # (```java)
+
+[//]: # (// 최대공약수 재귀 방식)
+
+[//]: # (int gcd&#40;int a, int b&#41; {)
+
+[//]: # (  if &#40;b == 0&#41; return a;)
+
+[//]: # (  // GCD&#40;a, b&#41; = GCD&#40;b, r&#41; 이므로 &#40;r = a % b&#41;)
+
+[//]: # (  return gcd&#40;b, a%b&#41;;)
+
+[//]: # (})
+
+[//]: # ()
+[//]: # (// 최소공배수 : Least Common multiple)
+
+[//]: # (int lcm&#40;int a, int b&#41; {)
+
+[//]: # (  return &#40;a*b&#41; / gcd&#40;a, b&#41;;)
+
+[//]: # (})
+
+[//]: # (```)
+
+[//]: # ()
+[//]: # (### 하노이탑)
+
+[//]: # ()
+[//]: # (```java)
+
+[//]: # (void Hanoi&#40;int N, int start, int mid, int to&#41; {)
+
+[//]: # (  if &#40;N == 1&#41; {)
+
+[//]: # (    print&#40;start + " " + to + "\n"&#41;;)
+
+[//]: # (    return;)
+
+[//]: # (  })
+
+[//]: # (  )
+[//]: # (  // STEP 1 : N-1개를 A에서 B로 이동)
+
+[//]: # (  Hanoi&#40;N-1, start, to, mid&#41;;)
+
+[//]: # (  )
+[//]: # (  // STEP 2 : 1개를 A에서 C로 이동)
+
+[//]: # (  print&#40;start + " " + to + "\n"&#41;;)
+
+[//]: # (  )
+[//]: # (  // STEP 3 : N-1개를 B에서 C로 이동)
+
+[//]: # (  Hanoi&#40;N-1, mid, start, to&#41;;)
+
+[//]: # (})
+
+[//]: # (```)
